# baygon2

./: .coverage  .gitignore  README.md  mkdocs.yml  plan.md  pyproject.toml
.github/workflows/: docs.yml
docs/: advanced.md  getting-started.md  index.md  scripting.md  syntax.md
docs/docs/.vuepress/.cache/deps_temp_89274bf4/: vue-router.js
docs/docs/.vuepress/.temp/internal/: clientConfigs.js  routes.js  siteData.js  themeData.js
docs/docs/.vuepress/.temp/markdown-tab/: config.js
docs/docs/.vuepress/.temp/pages/: 404.html.js  index.html.js
docs/docs/.vuepress/.temp/pages/guide/: advanced.html.js  advanced.html.vue  contributing.html.js  index.html.js  index.html.vue  score.html.js  score.html.vue  scripting.html.js  scripting.html.vue  syntax.html.js  syntax.html.vue
docs/docs/.vuepress/.temp/prismjs/: config.js
docs/docs/.vuepress/.temp/styles/: index.scss
src/baygon/: README.md  __init__.py  cli.py  context.py  executable.py  filters.py  ids.py  loader.py  matchers.py  merge.py  schema.py  suite.py
tests/: conftest.py  test.yml  test_cli.py  test_context.py  test_executable.py  test_filters.py  test_ids.py  test_loader.py  test_matchers.py  test_merge.py  test_schema.py  test_schema_full.py  test_suite.py
